--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <head>
         <!-- The title tabs hold the title for the page in the tabs browser -->
         <title> Blast Off! </title>
-    </head>
+        <!--This is so that the website can refer back to the folder of style.css that is to the side! I learned to do this to change the background color of the webpage from YouTube-->
+        <link rel="stylesheet" href="style.css" />
+     </head>
     <body>
         <!--The body tag contains the content that will be displayed on the page -->
         <!-- H1 is the biggest header tag -->
@@ -19,7 +21,6 @@
         <h2> I'm so excited you could be with us. </h2>
         <h1> Choose your Ship: </h1>
         <!-- ul element represents a list of items, it makes a list! it stands of "Un-ordered List" -->
-        
         <ul>
             <!-- li is the items in your list, it stands for "List Item"-->
             <li> Millennium Falcon </li>
@@ -27,8 +28,42 @@
             <li> Razor Crest </li>
             <li> X-Wing </li>
         </ul>
-        <p> Countdown goes here </p>
+        <!-- This is the show that the counter will be referred back to continuously, itll be pulled from here! -->
+        <p id="counter"></p>  
+        <!--Now I will try this code for Javascript and place in the timer for Blast off! -->
+    <script>
+    let currTime = 50;
+    setTimeout(CountDown, 0000)
+    setTimeout(CountDown, 5000)
+    setTimeout(CountDown, 10000)
+    setTimeout(CountDown, 15000)
+    setTimeout(CountDown, 20000)
+    setTimeout(CountDown, 25000)
+    setTimeout(CountDown, 30000)
+    setTimeout(CountDown, 35000)
+    setTimeout(CountDown, 40000)
+    setTimeout(CountDown, 45000)
+    setTimeout(CountDown, 50000)
+function CountDown(){ //This defines the function of a countdown!
+        if(currTime == 0){ //If the statement is "true", itll show the alert box saying "blast off" at 0 and pop up the image
+                alert("Blast off!!");
+                document.getElementById("counter").innerHTML = ("Countdown: " + currTime);
+                show_image('https://media.wired.com/photos/5cf5a578da5cea74b6c166f3/2:1/w_2400,h_1200,c_limit/science_millenium-falcon_1152527228.jpg', 1200, 600, 'LOGO');
+        }
+        else{//When the statement is "false" it will show an alternative- I have down 'LOGO' so itll pop up the word LOGO in its place :)
+                document.getElementById("counter").innerHTML = ("Countdown: "+ currTime);
+        }
+        currTime -= 5;}
+//this function prints out the picture by taking 4 variables as parameters: src= Source of the image, Width & Height is the size of the image, alt= the alternative for the image 
+function show_image(src, width, height, alt) {
+    var img = document.createElement("img");
+    img.src = src;
+    img.width = width;
+    img.height = height;
+    img.alt = alt;
+    //This is what makes it show up on the page within the Body Tag!
+    document.body.appendChild(img);}
+        </script>
     </body>
-
 <!-- The page ends here -->
 </html>
